kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/db_network: "true"
        io.kompose.service: db
    spec:
      containers:
      - args:
        - --sql_mode=
        image: mysql:latest
        imagePullPolicy: ""
        name: db
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d/
          name: db-claim0
          readOnly: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: db-claim0
        persistentVolumeClaim:
          claimName: db-claim0
          readOnly: true
status: {}
