kubernetes/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/db_network: "true"
        io.kompose.network/nginx_network: "true"
        io.kompose.service: grafana
    spec:
      containers:
      - env:
        - name: GF_INSTALL_PLUGINS
          value: briangann-gauge-panel
        image: grafana/grafana:latest
        imagePullPolicy: ""
        name: grafana
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /etc/grafana/grafana.ini
          name: grafana-claim0
        - mountPath: /etc/grafana/provisioning/datasources/default.yaml
          name: grafana-claim1
        - mountPath: /etc/grafana/provisioning/dashboards/default.yaml
          name: grafana-claim2
        - mountPath: /var/lib/grafana/dashboards
          name: grafana-claim3
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: grafana-claim0
        persistentVolumeClaim:
          claimName: grafana-claim0
      - name: grafana-claim1
        persistentVolumeClaim:
          claimName: grafana-claim1
      - name: grafana-claim2
        persistentVolumeClaim:
          claimName: grafana-claim2
      - name: grafana-claim3
        persistentVolumeClaim:
          claimName: grafana-claim3
status: {}
