kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/db_network: "true"
        io.kompose.network/nginx_network: "true"
        io.kompose.service: web
    spec:
      containers:
      - image: web
        imagePullPolicy: IfNotPresent
        name: web
        resources: {}
        volumeMounts:
        - mountPath: /run/secrets/certificate
          name: certificate
        - mountPath: /run/secrets/db
          name: db
        - mountPath: /run/secrets/flask
          name: flask
        - mountPath: /etc/gridt
          name: web-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: db
        secret:
          items:
          - key: db
            path: db
          secretName: db
      - name: flask
        secret:
          items:
          - key: flask
            path: flask
          secretName: flask
      - name: certificate
        secret:
           items:
           - key: certificate
             path: certificate
           secretName: certificate
      - name: web-claim0
        persistentVolumeClaim:
          claimName: web-claim0
status: {}
